--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--🤞Header Logo✌️-->
-    <header class="page-header">
+    <header class="page-header page-header__after">
       <div class="conteiner">
         <div class="page-header__block">
           <a href="" class="logo"><img src="./images/logo.svg" alt="" /></a>
@@ -82,193 +82,252 @@
       </section>
       <section class="categories">
         <div class="conteiner">
-          <h2 class="categories-title visually-hidden">подобрать тур</h2>
-          <ul class="categories-card-set">
-            <li class="categories-item">
+          <h2 class="categories__title visually-hidden">подобрать тур</h2>
+          <ul class="categories__card">
+            <li class="categories__item">
               <a href="#">
-                l
                 <img
-                  src="./images/Турбазы-на-Байкале.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/greanhome.jpg    1x,
+                    ./images/greanhome@2x.jpg 2x,
+                    ./images/greanhome@3x.jpg 3x
+                  "
+                  src="./images/greanhome.jpg"
+                  alt="greanhome"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Турбазы на Байкале</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Турбазы на Байкале</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Экскурсии-и-туры.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/statuetkalva.jpg    1x,
+                    ./images/statuetkalva@2x.jpg 2x,
+                    ./images/statuetkalva@3x.jpg 3x
+                  "
+                  src="./images/statuetkalva.jpg"
+                  alt="statuetkalva"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Экскурсии и туры</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Экскурсии и туры</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Охота-и-рыбалка.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/fish.jpg    1x,
+                    ./images/fish@2x.jpg 2x,
+                    ./images/fish@3x.jpg 3x
+                  "
+                  src="./images/fish.jpg"
+                  alt="fish"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Охота и рыбалка</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Охота и рыбалка</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Экстрим-туры.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/ekstrimturi.jpg    1x,
+                    ./images/ekstrimturi@2x.jpg 2x,
+                    ./images/ekstrimturi@3x.jpg 3x
+                  "
+                  src="./images/ekstrimturi.jpg"
+                  alt="ekstrimturi"
+                  width="288px"
                 />
-                <div class="categories-subtitle"><h3>Экстрим туры</h3></div></a
-              >
-            </li>
-            <li class="categories-item">
-              <a href="#"
-                ><img
-                  src="./images/Теплоходы,-яхты.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
-                />
-                <div class="categories-subtitle">
-                  <h3>Теплоходы, яхты</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Экстрим туры</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Красоты-Байкала.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/iaxta.jpg    1x,
+                    ./images/iaxta@2x.jpg 2x,
+                    ./images/iaxta@3x.jpg 3x
+                  "
+                  src="./images/iaxta.jpg"
+                  alt="iaxta"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Красоты Байкала</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Теплоходы, яхты</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Гостиницы-в-Улан-Удэ.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/krasotibaikala.jpg    1x,
+                    ./images/krasotibaikala@2x.jpg 2x,
+                    ./images/krasotibaikala@3x.jpg 3x
+                  "
+                  src="./images/krasotibaikala.jpg"
+                  alt="krasotibaikala"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Гостиницы в Улан-Удэ</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Красоты Байкала</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Транспорт.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/hotelulanude.jpg    1x,
+                    ./images/hotelulanude@2x.jpg 2x,
+                    ./images/hotelulanude@3x.jpg 3x
+                  "
+                  src="./images/hotelulanude.jpg"
+                  alt="hotelulanude"
+                  width="288px"
                 />
-                <div class="categories-subtitle"><h3>Транспорт</h3></div></a
-              >
-            </li>
-            <li class="categories-item">
-              <a href="#"
-                ><img
-                  src="./images/Деловой-туризм.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
-                />
-                <div class="categories-subtitle">
-                  <h3>Деловой туризм</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Гостиницы в Улан-Удэ</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Круизы-по-Байкалу.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/transport.jpg    1x,
+                    ./images/transport@2x.jpg 2x,
+                    ./images/transport@3x.jpg 3x
+                  "
+                  src="./images/transport.jpg"
+                  alt="transport"
+                  width="288px"
                 />
-                <div class="categories-subtitle">
-                  <h3>Круизы по Байкалу</h3>
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Транспорт</h3>
                 </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/Зимние-туры.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/delavoichelovek.jpg    1x,
+                    ./images/delavoichelovek@2x.jpg 2x,
+                    ./images/delavoichelovek@3x.jpg 3x
+                  "
+                  src="./images/delavoichelovek.jpg"
+                  alt="delavoichelovek"
+                  width="288px"
                 />
-                <div class="categories-subtitle"><h3>Зимние туры</h3></div></a
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Деловой туризм</h3>
+                </div></a
               >
             </li>
-            <li class="categories-item">
+            <li class="categories__item">
               <a href="#"
                 ><img
-                  src="./images/О-Байкале.jpg"
-                  alt="фото категории"
-                  width="256px"
-                  height="152px"
+                  srcset="
+                    ./images/kruizpobaikalu.jpg    1x,
+                    ./images/kruizpobaikalu@2x.jpg 2x,
+                    ./images/kruizpobaikalu@3x.jpg 3x
+                  "
+                  src="./images/kruizpobaikalu.jpg"
+                  alt="kruizpobaikalu"
+                  width="288px"
                 />
-                <div class="categories-subtitle"><h3>Карта Байкала</h3></div></a
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Круизы по Байкалу</h3>
+                </div></a
+              >
+            </li>
+            <li class="categories__item">
+              <a href="#"
+                ><img
+                  srcset="
+                    ./images/wintertour.jpg    1x,
+                    ./images/wintertour@2x.jpg 2x,
+                    ./images/wintertour@3x.jpg 3x
+                  "
+                  src="./images/wintertour.jpg"
+                  alt="wintertour"
+                  width="288px"
+                />
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Зимние туры</h3>
+                </div></a
+              >
+            </li>
+            <li class="categories__item">
+              <a href="#"
+                ><img
+                  srcset="
+                    ./images/O-baikale.jpg    1x,
+                    ./images/O-baikale@2x.jpg 2x,
+                    ./images/O-baikale@3x.jpg 3x
+                  "
+                  src="./images/O-baikale.jpg"
+                  alt="O-baikale"
+                  width="288px"
+                />
+                <div class="categories__block">
+                  <h3 class="categories__subtitle">Карта Байкала</h3>
+                </div></a
               >
             </li>
           </ul>
         </div>
       </section>
       <section class="directions">
-        <h2>Основные направления деятельности</h2>
-        <ul>
-          <li>
-            <p>
-              Групповые и индивидуальные туры по Байкалу для российских и
-              иностранных туристов
-            </p>
-          </li>
-          <li>
-            <p>
-              Экскурсии по городу Улан-Удэ, Республике Бурятия,городу Иркутск
-            </p>
-          </li>
-          <li>
-            <p>Услуги гидов-переводчиков на любом иностранном языке</p>
-          </li>
-          <li>
-            <p>Круизы и прогулки по Байкалу на теплоходах и катерах</p>
-          </li>
-          <li>
-            <p>Профессиональная организация охоты и рыбалки на Байкале</p>
-          </li>
-          <li>
-            <p>Аренда автотранспорта для экскурсий и пассажирских перевозок</p>
-          </li>
-          <li>
-            <p>Бронирование гостиниц в городе Улан-Удэ и на Байкале</p>
-          </li>
-          <li>
-            <p>Организация индивидуальных туров и VIP-туров на Байкале</p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="directions__title">Основные направления деятельности</h2>
+          <ul class="directions__list">
+            <li class="directions__item">
+              <p>
+                Групповые и индивидуальные туры по Байкалу для российских и
+                иностранных туристов
+              </p>
+            </li>
+            <li>
+              <p>
+                Экскурсии по городу Улан-Удэ, Республике Бурятия,городу Иркутск
+              </p>
+            </li>
+            <li>
+              <p>Услуги гидов-переводчиков на любом иностранном языке</p>
+            </li>
+            <li>
+              <p>Круизы и прогулки по Байкалу на теплоходах и катерах</p>
+            </li>
+            <li>
+              <p>Профессиональная организация охоты и рыбалки на Байкале</p>
+            </li>
+            <li>
+              <p>
+                Аренда автотранспорта для экскурсий и пассажирских перевозок
+              </p>
+            </li>
+            <li>
+              <p>Бронирование гостиниц в городе Улан-Удэ и на Байкале</p>
+            </li>
+            <li>
+              <p>Организация индивидуальных туров и VIP-туров на Байкале</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="suggestions">
         <h2>Популярные предложения</h2>
