--- a/index.html
+++ b/index.html
@@ -296,188 +296,243 @@
           <h2 class="directions__title">Основные направления деятельности</h2>
           <ul class="directions__list">
             <li class="directions__item">
-              <p>
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-37"></use></svg
+              ></a>
+              <p class="directions__text">
                 Групповые и индивидуальные туры по Байкалу для российских и
                 иностранных туристов
               </p>
             </li>
-            <li>
-              <p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-38"></use></svg
+              ></a>
+              <p class="directions__text">
                 Экскурсии по городу Улан-Удэ, Республике Бурятия,городу Иркутск
               </p>
             </li>
-            <li>
-              <p>Услуги гидов-переводчиков на любом иностранном языке</p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-39"></use></svg
+              ></a>
+              <p class="directions__text">
+                Услуги гидов-переводчиков на любом иностранном языке
+              </p>
             </li>
-            <li>
-              <p>Круизы и прогулки по Байкалу на теплоходах и катерах</p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-40"></use></svg
+              ></a>
+              <p class="directions__text">
+                Круизы и прогулки по Байкалу на теплоходах и катерах
+              </p>
             </li>
-            <li>
-              <p>Профессиональная организация охоты и рыбалки на Байкале</p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-41"></use></svg
+              ></a>
+              <p class="directions__text">
+                Профессиональная организация охоты и рыбалки на Байкале
+              </p>
             </li>
-            <li>
-              <p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-42"></use></svg
+              ></a>
+              <p class="directions__text">
                 Аренда автотранспорта для экскурсий и пассажирских перевозок
               </p>
             </li>
-            <li>
-              <p>Бронирование гостиниц в городе Улан-Удэ и на Байкале</p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-626"></use></svg
+              ></a>
+              <p class="directions__text">
+                Бронирование гостиниц в городе Улан-Удэ и на Байкале
+              </p>
             </li>
-            <li>
-              <p>Организация индивидуальных туров и VIP-туров на Байкале</p>
+            <li class="directions__item">
+              <a href="" class="directions__link"
+                ><svg width="84" height="84">
+                  <use href="./images/symbol-defs.svg#iconGroup-44"></use></svg
+              ></a>
+              <p class="directions__text">
+                Организация индивидуальных туров и VIP-туров на Байкале
+              </p>
             </li>
           </ul>
         </div>
       </section>
       <section class="suggestions">
-        <h2>Популярные предложения</h2>
-        <ul>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Зимний  Чивыркуйский залив 1.jpg"
-                alt="Чивыркуйский залив"
-                width="256"
-                height="256"
-              />
-              <h3>Зимний однодневный тур на Чивыркуйский залив</h3>
-              <p>Cтоимость 4000 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Зимний  Ольхон 2.jpg"
-                alt="Зимний  Ольхон"
-                width="256"
-                height="256"
-              />
-              <h3>Зимний однодневный тур на остров Ольхон</h3>
-              <p>Cтоимость 5000 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Иволгинский дацан.jpg"
-                alt="Иволгинский дацан"
-                width="544"
-                height="544"
-              />
-              <h3>Экскурсия в Иволгинский дацан</h3>
-              <p>Продолжительность 4 часа Cтоимость от 500 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Улан-Удэ 1.jpg"
-                alt="Улан-Удэ"
-                width="256"
-                height="256"
-              />
-              <h3>Обзорная экскурсия по Улан-Удэ</h3>
-              <p>Продолжительность 3 часа Cтоимость от 500 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Эко-отель  1.jpg"
-                alt="Эко-отель"
-                width="256"
-                height="256"
-              />
-              <h3>Эко-отель «Байкальское шале», с. Максимиха</h3>
-              <p>Стоимость от 6500 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Летний Чивыркуйский.jpg"
-                alt="Летний Чивыркуйский"
-                width="256"
-                height="256"
-              />
-              <h3>Летний однодневный тур в Чивыркуйский залив</h3>
-              <p>Cтоимость 4000 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Отель «Белая Карета», с 1.jpg"
-                alt="Белая Карета"
-                width="256"
-                height="256"
-              />
-              <h3>Отель «Белая Карета», с. Горячинск</h3>
-              <p>Cтоимость от 3200 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/«Байкальская Гавань» 1.jpg"
-                alt="Байкальская Гавань"
-                width="256"
-                height="256"
-              />
-              <h3>Однодневная поездка на Байкал «Байкальская Гавань»</h3>
-              <p>Стоимость от 1000 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/«Сагаан-Морин», с 1.jpg"
-                alt="Сагаан-Морин"
-                width="256"
-                height="256"
-              />
-              <h3>Парк-отель «Сагаан-Морин», с. Сухая</h3>
-              <p>Стоимость от 3500 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/Летний  Ольхон 2.jpg"
-                alt="Летний  Ольхон"
-                width="256"
-                height="256"
-              />
-              <h3>Летний однодневный тур на остров Ольхон</h3>
-              <p>Стоимость 8500 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/«Байкальская Ривьера».jpg"
-                alt="Байкальская Ривьера"
-                width="256"
-                height="256"
-              />
-              <h3>Зимний тур «Чивыркуйская сказка»</h3>
-              <p>Стоимость 2000 руб.</p></a
-            >
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./images/images/«Чивыркуйская сказка».jpg"
-                alt="Чивыркуйская сказка"
-                width="256"
-                height="256"
-              />
-              <h3>Парк-отель «Байкальская Ривьера», с. Гремячинск</h3>
-              <p>Cтоимость от 3700 руб.</p></a
-            >
-          </li>
-        </ul>
-        <a href="">Показать все предложения</a>
+        <div class="conteiner">
+          <h2 class="suggestions__title">Популярные предложения</h2>
+          <ul class="suggestions__list">
+            <li class="suggestions__item">
+              <a href="#" class="suggestions__link">
+                <div class="suggestions__imgblock">
+                  <img
+                    class="suggestions__img"
+                    srcset="
+                      ./images/devushka.jpg    1x,
+                      ./images/devushka@2x.jpg 2x,
+                      ./images/devushka@3x.jpg 3x
+                    "
+                    src="./images/devushka.jpg"
+                    alt="devushka"
+                    width="288px"
+                  />
+                  <div class="suggestions__block">
+                    <h3 class="suggestions__subtitle">
+                      Зимний однодневный тур на Чивыркуйский залив
+                    </h3>
+                    <p class="suggestions__price">Cтоимость 4000 руб.</p>
+                  </div>
+                </div></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Зимний  Ольхон 2.jpg"
+                  alt="Зимний  Ольхон"
+                  width="256"
+                  height="256"
+                />
+                <h3>Зимний однодневный тур на остров Ольхон</h3>
+                <p>Cтоимость 5000 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Иволгинский дацан.jpg"
+                  alt="Иволгинский дацан"
+                  width="544"
+                  height="544"
+                />
+                <h3>Экскурсия в Иволгинский дацан</h3>
+                <p>Продолжительность 4 часа Cтоимость от 500 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Улан-Удэ 1.jpg"
+                  alt="Улан-Удэ"
+                  width="256"
+                  height="256"
+                />
+                <h3>Обзорная экскурсия по Улан-Удэ</h3>
+                <p>Продолжительность 3 часа Cтоимость от 500 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Эко-отель  1.jpg"
+                  alt="Эко-отель"
+                  width="256"
+                  height="256"
+                />
+                <h3>Эко-отель «Байкальское шале», с. Максимиха</h3>
+                <p>Стоимость от 6500 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Летний Чивыркуйский.jpg"
+                  alt="Летний Чивыркуйский"
+                  width="256"
+                  height="256"
+                />
+                <h3>Летний однодневный тур в Чивыркуйский залив</h3>
+                <p>Cтоимость 4000 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Отель «Белая Карета», с 1.jpg"
+                  alt="Белая Карета"
+                  width="256"
+                  height="256"
+                />
+                <h3>Отель «Белая Карета», с. Горячинск</h3>
+                <p>Cтоимость от 3200 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/«Байкальская Гавань» 1.jpg"
+                  alt="Байкальская Гавань"
+                  width="256"
+                  height="256"
+                />
+                <h3>Однодневная поездка на Байкал «Байкальская Гавань»</h3>
+                <p>Стоимость от 1000 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/«Сагаан-Морин», с 1.jpg"
+                  alt="Сагаан-Морин"
+                  width="256"
+                  height="256"
+                />
+                <h3>Парк-отель «Сагаан-Морин», с. Сухая</h3>
+                <p>Стоимость от 3500 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/Летний  Ольхон 2.jpg"
+                  alt="Летний  Ольхон"
+                  width="256"
+                  height="256"
+                />
+                <h3>Летний однодневный тур на остров Ольхон</h3>
+                <p>Стоимость 8500 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/«Байкальская Ривьера».jpg"
+                  alt="Байкальская Ривьера"
+                  width="256"
+                  height="256"
+                />
+                <h3>Зимний тур «Чивыркуйская сказка»</h3>
+                <p>Стоимость 2000 руб.</p></a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/images/«Чивыркуйская сказка».jpg"
+                  alt="Чивыркуйская сказка"
+                  width="256"
+                  height="256"
+                />
+                <h3>Парк-отель «Байкальская Ривьера», с. Гремячинск</h3>
+                <p>Cтоимость от 3700 руб.</p></a
+              >
+            </li>
+          </ul>
+          <a href="">Показать все предложения</a>
+        </div>
       </section>
       <section class="map">
         <h2>Карта Байкала</h2>
