--- a/index.html
+++ b/index.html
@@ -377,49 +377,58 @@
           <ul class="suggestions__list">
             <li class="suggestions__item">
               <a href="#" class="suggestions__link">
-                <div class="suggestions__imgblock">
-                  <img
-                    class="suggestions__img"
-                    srcset="
-                      ./images/devushka.jpg    1x,
-                      ./images/devushka@2x.jpg 2x,
-                      ./images/devushka@3x.jpg 3x
-                    "
-                    src="./images/devushka.jpg"
-                    alt="devushka"
-                    width="288px"
-                  />
-                  <div class="suggestions__block">
-                    <h3 class="suggestions__subtitle">
-                      Зимний однодневный тур на Чивыркуйский залив
-                    </h3>
-                    <p class="suggestions__price">Cтоимость 4000 руб.</p>
-                  </div>
-                </div></a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="./images/images/Зимний  Ольхон 2.jpg"
-                  alt="Зимний  Ольхон"
-                  width="256"
-                  height="256"
+                <img
+                  class="suggestions__img"
+                  srcset="
+                    ./images/devushka.jpg    1x,
+                    ./images/devushka@2x.jpg 2x,
+                    ./images/devushka@3x.jpg 3x
+                  "
+                  src="./images/devushka.jpg"
+                  alt="devushka"
+                  width="288px"
                 />
-                <h3>Зимний однодневный тур на остров Ольхон</h3>
-                <p>Cтоимость 5000 руб.</p></a
+                <h3 class="suggestions__subtitle">
+                  Зимний однодневный тур на Чивыркуйский залив
+                </h3>
+                <p class="suggestions__price">Cтоимость 4000 руб.</p>
+              </a>
+            </li>
+            <li class="suggestions__item">
+              <a href="#" class="suggestions__link"
+                ><img
+                  class="suggestions__img"
+                  srcset="
+                    ./images/winterolxon.jpg    1x,
+                    ./images/winterolxon@2x.jpg 2x,
+                    ./images/winterolxon@3x.jpg 3x
+                  "
+                  src="./images/winterolxon.jpg"
+                  alt="Зимний  Ольхон"
+                  width="288"
+                />
+                <h3 class="suggestions__subtitle">
+                  Зимний однодневный тур на остров Ольхон
+                </h3>
+                <p class="suggestions__price">Cтоимость 5000 руб.</p></a
               >
             </li>
-            <li>
-              <a href="#"
+            <li class="suggestions__item">
+              <a href="#" class="suggestions__link"
                 ><img
+                  class="suggestions__img"
+                  srcset="./images/obrozovanie.jpg 1x"
                   src="./images/images/Иволгинский дацан.jpg"
                   alt="Иволгинский дацан"
                   width="544"
                   height="544"
                 />
-                <h3>Экскурсия в Иволгинский дацан</h3>
-                <p>Продолжительность 4 часа Cтоимость от 500 руб.</p></a
+                <h3 class="suggestions__subtitle">
+                  Экскурсия в Иволгинский дацан
+                </h3>
+                <p class="suggestions__price">
+                  Продолжительность 4 часа Cтоимость от 500 руб.
+                </p></a
               >
             </li>
             <li>
