--- a/index.html
+++ b/index.html
@@ -420,27 +420,28 @@
                   srcset="./images/obrozovanie.jpg 1x"
                   src="./images/images/Иволгинский дацан.jpg"
                   alt="Иволгинский дацан"
-                  width="544"
-                  height="544"
+                  width="288"
                 />
                 <h3 class="suggestions__subtitle">
-                  Экскурсия в Иволгинский дацан
+                  Обзорная экскурсия по Улан-Удэ
                 </h3>
                 <p class="suggestions__price">
-                  Продолжительность 4 часа Cтоимость от 500 руб.
+                  Продолжительность 3 часа Cтоимость от 500 руб.
                 </p></a
               >
             </li>
-            <li>
+            <li class="suggestions__item">
               <a href="#"
                 ><img
+                  class="suggestions__img"
                   src="./images/images/Улан-Удэ 1.jpg"
                   alt="Улан-Удэ"
-                  width="256"
-                  height="256"
+                  width="288"
                 />
-                <h3>Обзорная экскурсия по Улан-Удэ</h3>
-                <p>Продолжительность 3 часа Cтоимость от 500 руб.</p></a
+                <h3 class="suggestions__subtitle">
+                  Эко-отель «Байкальское шале», с. Максимиха
+                </h3>
+                <p class="suggestions__price">Стоимость от 6500 руб.</p></a
               >
             </li>
             <li>
