--- a/index.html
+++ b/index.html
@@ -377,40 +377,49 @@
           <ul class="suggestions__list">
             <li class="suggestions__item">
               <a href="#" class="suggestions__link">
-                <img
-                  class="suggestions__img"
-                  srcset="
-                    ./images/devushka.jpg    1x,
-                    ./images/devushka@2x.jpg 2x,
-                    ./images/devushka@3x.jpg 3x
-                  "
-                  src="./images/devushka.jpg"
-                  alt="devushka"
-                  width="288px"
-                />
-                <h3 class="suggestions__subtitle">
-                  Зимний однодневный тур на Чивыркуйский залив
-                </h3>
-                <p class="suggestions__price">Cтоимость 4000 руб.</p>
+                <div class="suggestions__block">
+                  <img
+                    class="suggestions__img"
+                    srcset="
+                      ./images/devushka.jpg    1x,
+                      ./images/devushka@2x.jpg 2x,
+                      ./images/devushka@3x.jpg 3x
+                    "
+                    src="./images/devushka.jpg"
+                    alt="devushka"
+                    width="288px"
+                  />
+
+                  <div class="suggestions__block2">
+                    <h3 class="suggestions__subtitle">
+                      Зимний однодневный тур на Чивыркуйский залив
+                    </h3>
+                    <p class="suggestions__price">Cтоимость 4000 руб.</p>
+                  </div>
+                </div>
               </a>
             </li>
             <li class="suggestions__item">
               <a href="#" class="suggestions__link"
-                ><img
-                  class="suggestions__img"
-                  srcset="
-                    ./images/winterolxon.jpg    1x,
-                    ./images/winterolxon@2x.jpg 2x,
-                    ./images/winterolxon@3x.jpg 3x
-                  "
-                  src="./images/winterolxon.jpg"
-                  alt="Зимний  Ольхон"
-                  width="288"
-                />
-                <h3 class="suggestions__subtitle">
-                  Зимний однодневный тур на остров Ольхон
-                </h3>
-                <p class="suggestions__price">Cтоимость 5000 руб.</p></a
+                ><div class="suggestions__block">
+                  <img
+                    class="suggestions__img"
+                    srcset="
+                      ./images/winterolxon.jpg    1x,
+                      ./images/winterolxon@2x.jpg 2x,
+                      ./images/winterolxon@3x.jpg 3x
+                    "
+                    src="./images/winterolxon.jpg"
+                    alt="Зимний  Ольхон"
+                    width="288"
+                  />
+                  <div class="suggestions__block2">
+                    <h3 class="suggestions__subtitle">
+                      Зимний однодневный тур на остров Ольхон
+                    </h3>
+                    <p class="suggestions__price">Cтоимость 5000 руб.</p>
+                  </div>
+                </div></a
               >
             </li>
             <li class="suggestions__item">
@@ -583,19 +592,22 @@
         </div>
       </section>
       <section class="about">
-        <h2>О Байкале</h2>
-        <p>
-          Озеро Байкал – глубочайшее и древнейшее озеро планеты. Древние жители
-          Прибайкалья называли его Священным морем и считали, что в Байкале нет
-          дна, обожествляли и наделяли его мистическими свойствами. Именно здесь
-          пронзительные чувства и скрытые способности человека находят выплеск.
-        </p>
-        <p>
-          Познается что-то новое не только в природе, но и в самом себе. Многие
-          посетившие Байкал люди утверждают, что озеро оказало большое влияние
-          на их дальнейшую жизнь.
-        </p>
-        <button type="button">Читать подробней</button>
+        <div class="conteiner">
+          <h2>О Байкале</h2>
+          <p>
+            Озеро Байкал – глубочайшее и древнейшее озеро планеты. Древние
+            жители Прибайкалья называли его Священным морем и считали, что в
+            Байкале нет дна, обожествляли и наделяли его мистическими
+            свойствами. Именно здесь пронзительные чувства и скрытые способности
+            человека находят выплеск.
+          </p>
+          <p>
+            Познается что-то новое не только в природе, но и в самом себе.
+            Многие посетившие Байкал люди утверждают, что озеро оказало большое
+            влияние на их дальнейшую жизнь.
+          </p>
+          <button type="button">Читать подробней</button>
+        </div>
       </section>
       <section class="gallery">
         <h2>Фотогалерея</h2>
