--- a/index.html
+++ b/index.html
@@ -424,63 +424,75 @@
             </li>
             <li class="suggestions__item">
               <a href="#" class="suggestions__link"
-                ><img
-                  class="suggestions__img"
-                  srcset="
-                    ./images/obrozovanie.jpg    1x,
-                    ./images/obrozovanie@2x.jpg 2x,
-                    ./images/obrozovanie@3x.jpg 3x
-                  "
-                  src="./images/obrozovanie.jpg"
-                  alt="obrozovanie"
-                  width="288"
-                />
-                <h3 class="suggestions__subtitle">
-                  Обзорная экскурсия по Улан-Удэ
-                </h3>
-                <p class="suggestions__price">
-                  Продолжительность 3 часа Cтоимость от 500 руб.
-                </p></a
+                ><div class="suggestions__block">
+                  <img
+                    class="suggestions__img"
+                    srcset="
+                      ./images/obrozovanie.jpg    1x,
+                      ./images/obrozovanie@2x.jpg 2x,
+                      ./images/obrozovanie@3x.jpg 3x
+                    "
+                    src="./images/obrozovanie.jpg"
+                    alt="obrozovanie"
+                    width="288"
+                  />
+                  <div class="suggestions__block2">
+                    <h3 class="suggestions__subtitle">
+                      Обзорная экскурсия по Улан-Удэ
+                    </h3>
+                    <p class="suggestions__price">
+                      Продолжительность 3 часа Cтоимость от 500 руб.
+                    </p>
+                  </div>
+                </div></a
               >
             </li>
             <li class="suggestions__item">
               <a href="#" class="suggestions__link"
-                ><img
-                  srcset="
-                    ./images/hotelbaikal.jpg    1x,
-                    ./images/hotelbaikal@2x.jpg 2x,
-                    ./images/hotelbaikal@3x.jpg 3x
-                  "
-                  class="suggestions__img"
-                  src="./images/hotelbaikal.jpg"
-                  alt="Улан-Удэ"
-                  width="288"
-                />
-                <h3 class="suggestions__subtitle">
-                  Эко-отель «Байкальское шале», с. Максимиха
-                </h3>
-                <p class="suggestions__price">Стоимость от 6500 руб.</p></a
+                ><div class="suggestions__block">
+                  <img
+                    srcset="
+                      ./images/hotelbaikal.jpg    1x,
+                      ./images/hotelbaikal@2x.jpg 2x,
+                      ./images/hotelbaikal@3x.jpg 3x
+                    "
+                    class="suggestions__img"
+                    src="./images/hotelbaikal.jpg"
+                    alt="Улан-Удэ"
+                    width="288"
+                  />
+                  <div class="suggestions__block2">
+                    <h3 class="suggestions__subtitle">
+                      Эко-отель «Байкальское шале», с. Максимиха
+                    </h3>
+                    <p class="suggestions__price">Стоимость от 6500 руб.</p>
+                  </div>
+                </div></a
               >
             </li>
             <li class="suggestions__item">
               <a href="#" class="suggestions__link"
-                ><img
-                  srcset="
-                    ./images/datsan.jpg    1x,
-                    ./images/datsan@2x.jpg 2x,
-                    ./images/datsan@3x.jpg 3x
-                  "
-                  class="suggestions__img"
-                  src="./images/datsan.jpg"
-                  alt="Эко-отель"
-                  width="288"
-                />
-                <h3 class="suggestions__subtitle">
-                  Экскурсия в Иволгинский дацан
-                </h3>
-                <p class="suggestions__price">
-                  Продолжительность 4 часа Cтоимость от 500 руб.
-                </p></a
+                ><div class="suggestions__block">
+                  <img
+                    srcset="
+                      ./images/datsan.jpg    1x,
+                      ./images/datsan@2x.jpg 2x,
+                      ./images/datsan@3x.jpg 3x
+                    "
+                    class="suggestions__img"
+                    src="./images/datsan.jpg"
+                    alt="Эко-отель"
+                    width="288"
+                  />
+                  <div class="suggestions__block2">
+                    <h3 class="suggestions__subtitle">
+                      Экскурсия в Иволгинский дацан
+                    </h3>
+                    <p class="suggestions__price">
+                      Продолжительность 4 часа Cтоимость от 500 руб.
+                    </p>
+                  </div>
+                </div></a
               >
             </li>
             <li class="suggestions__item suggestions__item-hidden">
@@ -567,17 +579,22 @@
                 <p>Cтоимость от 3700 руб.</p></a
               >
             </li>
-            <li class="suggestions__item">
-              <a href="">
-                <img
-                  srcset="./images/photogalery.jpg 1x, ./images/photogalery@2x.jpg 2xx, ./images/photogalery@3x.jpg 3x,"
-                  src="./images/photogalery.jpg"
-                  alt="photogalery"
-                />
-                <h3>Показать все предложения</h3>
-              </a>
-            </li>
           </ul>
+            <div class="offer">
+            <a href="">
+              <div class="offer__block">
+              <img
+                srcset="./images/photogalery.jpg 1x, ./images/photogalery@2x.jpg 2xx, ./images/photogalery@3x.jpg 3x,"
+                src="./images/photogalery.jpg"
+                alt="photogalery"
+              />
+              <div class="offer__title">
+                <h3 class="offer__subtitle">Показать все предложения</h3>
+              </div>
+              </div>
+            </a>
+            </div>
+          </div>
         </div>
       </section>
       <section class="map">
